syntax = "proto3";

package orders;

message Order{
    int64 id = 1;
    int64 userId = 2;
    repeated int64 items = 3;
}

message CreateOrder{
    int64 userId = 1;
    string request_id = 2;
    string worker_id = 3;
}

message CreateOrderWithId{
    int64 id = 1;
    string request_id = 2;
    int64 userId = 3;
    string worker_id = 4;
}

message CreateOrderResponse{
    int64 orderId = 1;
}

message OrderRequest{
    message RemoveOrderRequest{
        int64 id = 1;
    }

    message FindOrderRequest{
        int64 id = 1;
    }

    message AddItemRequest{
        int64 id = 1;
        int64 itemId = 2;
    }

    message RemoveItemRequest{
        int64 id = 1;
        int64 itemId = 2;
    }

    // Request id for identifying the request
    // in the endpoint and answer
    string request_id = 1;

    // Worker id used as key of the response
    // so a given worker just has to save its
    // own messages
    string worker_id = 2;

    oneof message {
        RemoveOrderRequest remove_order = 3;
        FindOrderRequest find_order = 4;
        AddItemRequest add_item = 5;
        RemoveItemRequest remove_item = 6;
    }
}

message OrderResponse {
    string request_id = 1;
    string result = 2;
}

message OrdersPayFind {
    int64 order_id = 1;
    string request_id = 2;
    string worker_id = 3;
}

message OrdersPayReply{
    string request_id = 1;
    string worker_id = 2;
    int64 total_cost = 3;
    bool status = 4;
}


